Fix bug by adding z-index to location-map class

--- a/src/routes/locations.css
+++ b/src/routes/locations.css
@@ -42,6 +42,7 @@
 .location-map {
   width: 100%;
   height: 320px;
+  z-index: -1;
 }
 
 /* Media Queries */
